k8s/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service-deployment

spec: 
  replicas: 2

  selector:
    matchLabels:
      app: user-service
    
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers: 
        - name: user-service
          image: risvanthkm/user-service:latest
          ports:
          - containerPort: 8081
