k8s/user-service/service.yaml
apiVersion: v1
kind: Service

metadata: 
  name: order-service

spec:
  replicas: 2
  selector: 
    matchLabels:
      app : order-service
  
  port: 
    - protocol : TCP
      port: 8081
      targetPort: 8081

  type: ClusterIP
