k8s/user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-service-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081
